--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ matplotlib
 librosa
 tensorboard>=1.14
 future
-pyarrow==0.14.1
+pyarrow #pyarrow==0.14.0
 lmdb==0.96
 tqdm
-fasttext
 configargparse
 soundfile
 pygame
 google-cloud-texttospeech==1.0.1
+fasttext
